- https://github.com/eclipse-sirius/sirius-web/issues/3653[#3653] [gantt] Add documentation for gantt representation
- https://github.com/eclipse-sirius/sirius-web/issues/3634[#3634] [sirius-web] Simplifying the contribution to the GraphQL subscription of the diagram for custom nodes

== v2024.5.0

=== Shapes

- Configurable collapse
- Add support for EMF models migration
- Add support for representations migration
- Add Assertions and Navigators to improve Diagram testability
- Improve document upload
- Configurable visibility
- Create a representation using the content of another representation as input
- Add support for DateTime widget

=== Architectural decision records

- [ADR-139] Add Is Collapsed By Default Expression in NodeDescription entity in the view DSL
- [ADR-140] Add collapse and expand services
- [ADR-141] Factorize GraphQL queries in tests
- [ADR-142] Add report on document upload
- [ADR-143] Handle documents upload with other formats than JSON and XMI
- [ADR-144] Add the support for EMF models migration
- [ADR-145] Add a hook to update nodes in ReactFlow
- [ADR-146] Add support for contributing representation metadata for transient representations
- [ADR-147] Add support for overlapping nodes
- [ADR-148] Improve edge layout
- [ADR-149] Add Default Visibility Fields in View DSL
- [ADR-150] Add hide/reveal/fade/unfade services

=== Deprecation warning

- https://github.com/eclipse-sirius/sirius-web/issues/3279[#3279] Starting with Sirius Web 2024.5.0, every maven modules used by `sirius-web-sample-application` in the `sirius-web` package will be deprecated including `sirius-web-sample-application`.
This includes maven modules such as `sirius-web-persistence`, `sirius-web-services`, `sirius-web-graphql` among others.
They will be replaced by the maven modules of the new architecture used by `sirius-web`.
The removal of those deprecated modules will occur during the iteration 2024.9.0.


=== Breaking changes
