@@ -1,0 +1,25 @@
+/*******************************************************************************
+ * Copyright (c) 2024 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.sirius.components.graphql.api;
+
+import graphql.TypeResolutionEnvironment;
+import graphql.schema.GraphQLObjectType;
+
+/**
+ * Used to find GraphQL object type not found by the reflective type resolver.
+ *
+ * @author sbegaudeau
+ */
+public interface ITypeResolverDelegate {
+    GraphQLObjectType getType(TypeResolutionEnvironment environment);
+}
