@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -11,6 +11,9 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 package org.eclipse.sirius.components.graphql.api;
+
+import java.util.List;
+import java.util.Objects;
 
 import graphql.TypeResolutionEnvironment;
 import graphql.schema.GraphQLObjectType;
@@ -24,11 +27,27 @@ import graphql.schema.TypeResolver;
  */
 public class ReflectiveTypeResolver implements TypeResolver {
 
+    private final List<ITypeResolverDelegate> typeResolverDelegates;
+
+    public ReflectiveTypeResolver(List<ITypeResolverDelegate> typeResolverDelegates) {
+        this.typeResolverDelegates = Objects.requireNonNull(typeResolverDelegates);
+    }
+
     @Override
     public GraphQLObjectType getType(TypeResolutionEnvironment environment) {
         GraphQLSchema graphQLSchema = environment.getSchema();
         Object object = environment.getObject();
-        return graphQLSchema.getObjectType(object.getClass().getSimpleName());
+        var graphQLObjectType = graphQLSchema.getObjectType(object.getClass().getSimpleName());
+
+        if (graphQLObjectType == null) {
+            graphQLObjectType = this.typeResolverDelegates.stream()
+                    .map(typeResolverDelegate -> typeResolverDelegate.getType(environment))
+                    .filter(Objects::nonNull)
+                    .findFirst()
+                    .orElse(null);
+        }
+
+        return graphQLObjectType;
     }
 
 }
